--- a/resume-template.tex
+++ b/resume-template.tex
@@ -9,8 +9,7 @@
 \usepackage{fontspec}
 
 \usepackage{xcolor}
-% Use sans-serif font (requires XeLaTeX or LuaLaTeX)
-\renewcommand{\familydefault}{\sfdefault}
+% Use serif font (default)
 
 \newcommand{\datecolor}[1]{\textcolor{datecolor}{\sffamily #1}}
 
